# lightpdf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/architecture/: annotations.md  core.md  overview.md
docs/guide/: getting-started.md  gui.md  mcp-server.md
pdfops-core/: Cargo.toml
pdfops-core/src/: compress.rs  lib.rs  md_to_typst.rs
pdfops-gui/: README.md  index.html  package-lock.json  package.json
pdfops-gui/src/: App.css  App.tsx
pdfops-gui/src-tauri/: Cargo.toml  tauri.conf.json
pdfops-gui/src-tauri/capabilities/: default.json
pdfops-gui/src-tauri/src/: lib.rs  main.rs  pdf_ops.rs
pdfops-gui/src/components/: PdfViewer.tsx  Toolbar.tsx
pdfops-gui/src/types/: annotations.ts
pdfops-mcp/: Cargo.toml
pdfops-mcp/src/: main.rs
