[workspace]
members = [
    "pdfops-gui/src-tauri",
    "pdfops-core",
    "pdfops-mcp",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
pdfops-core = { path = "pdfops-core" }
